Cube Datei Renamed
Deleted unused Pin Configuration

Code still old

--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -29,44 +29,41 @@ Mcu.IP9=USB_DEVICE
 Mcu.IPNb=11
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PE2
-Mcu.Pin1=PE4
-Mcu.Pin10=PA1
-Mcu.Pin11=PA2
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PC4
-Mcu.Pin15=PC5
-Mcu.Pin16=PB13
-Mcu.Pin17=PB14
-Mcu.Pin18=PD8
-Mcu.Pin19=PD9
-Mcu.Pin2=PE5
-Mcu.Pin20=PG6
-Mcu.Pin21=PG7
-Mcu.Pin22=PA8
-Mcu.Pin23=PA9
-Mcu.Pin24=PA10
-Mcu.Pin25=PA11
-Mcu.Pin26=PA12
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PG11
-Mcu.Pin3=PC13
-Mcu.Pin30=PG13
-Mcu.Pin31=PB3
-Mcu.Pin32=PB7
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin4=PC14/OSC32_IN
-Mcu.Pin5=PC15/OSC32_OUT
-Mcu.Pin6=PH0/OSC_IN
-Mcu.Pin7=PH1/OSC_OUT
-Mcu.Pin8=PC1
-Mcu.Pin9=PA0/WKUP
-Mcu.PinsNb=37
+Mcu.Pin0=PC13
+Mcu.Pin1=PC14/OSC32_IN
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB13
+Mcu.Pin14=PB14
+Mcu.Pin15=PD8
+Mcu.Pin16=PD9
+Mcu.Pin17=PG6
+Mcu.Pin18=PG7
+Mcu.Pin19=PA8
+Mcu.Pin2=PC15/OSC32_OUT
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PG11
+Mcu.Pin27=PG13
+Mcu.Pin28=PB3
+Mcu.Pin29=PB7
+Mcu.Pin3=PH0/OSC_IN
+Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin31=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin33=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin4=PH1/OSC_OUT
+Mcu.Pin5=PC1
+Mcu.Pin6=PA0/WKUP
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA6
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -193,18 +190,6 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
-PE2.GPIOParameters=GPIO_Label
-PE2.GPIO_Label=ENA
-PE2.Locked=true
-PE2.Signal=GPIO_Output
-PE4.GPIOParameters=GPIO_Label
-PE4.GPIO_Label=IN1
-PE4.Locked=true
-PE4.Signal=GPIO_Output
-PE5.GPIOParameters=GPIO_Label
-PE5.GPIO_Label=IN2
-PE5.Locked=true
-PE5.Signal=GPIO_Output
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
@@ -252,8 +237,8 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Hauptprogramm.ioc
-ProjectManager.ProjectName=Hauptprogramm
+ProjectManager.ProjectFileName=ProjectCube.ioc
+ProjectManager.ProjectName=ProjectCube
 ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
