--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -28,40 +28,42 @@ Mcu.IP9=USB_OTG_FS
 Mcu.IPNb=10
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PC13
-Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PA7
-Mcu.Pin11=PC4
-Mcu.Pin12=PC5
-Mcu.Pin13=PB13
-Mcu.Pin14=PB14
-Mcu.Pin15=PD8
-Mcu.Pin16=PD9
-Mcu.Pin17=PG6
-Mcu.Pin18=PG7
-Mcu.Pin19=PA8
-Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=PG11
-Mcu.Pin27=PG13
-Mcu.Pin28=PB3
-Mcu.Pin29=PB7
-Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=VP_SYS_VS_Systick
-Mcu.Pin31=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin32=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin5=PC1
-Mcu.Pin6=PA0/WKUP
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA6
-Mcu.PinsNb=33
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PA2
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC4
+Mcu.Pin14=PC5
+Mcu.Pin15=PB13
+Mcu.Pin16=PB14
+Mcu.Pin17=PD8
+Mcu.Pin18=PD9
+Mcu.Pin19=PG6
+Mcu.Pin2=PC13
+Mcu.Pin20=PG7
+Mcu.Pin21=PA8
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PG11
+Mcu.Pin29=PG13
+Mcu.Pin3=PC14/OSC32_IN
+Mcu.Pin30=PB3
+Mcu.Pin31=PB7
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin34=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin4=PC15/OSC32_OUT
+Mcu.Pin5=PH0/OSC_IN
+Mcu.Pin6=PH1/OSC_OUT
+Mcu.Pin7=PC1
+Mcu.Pin8=PA0/WKUP
+Mcu.Pin9=PA1
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -187,6 +189,16 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE2.GPIO_Label=BlueButton
+PE2.GPIO_PuPd=GPIO_PULLDOWN
+PE2.Locked=true
+PE2.Signal=GPIO_Input
+PE3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE3.GPIO_Label=RedButton
+PE3.GPIO_PuPd=GPIO_PULLDOWN
+PE3.Locked=true
+PE3.Signal=GPIO_Input
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
@@ -197,8 +209,9 @@ PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
 PG13.Locked=true
 PG13.Mode=RMII
 PG13.Signal=ETH_TXD0
-PG6.GPIOParameters=GPIO_Label
+PG6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
+PG6.GPIO_PuPd=GPIO_PULLDOWN
 PG6.Locked=true
 PG6.Signal=GPIO_Output
 PG7.GPIOParameters=GPIO_Label
@@ -240,7 +253,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_TIM14_Init-TIM14-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -336,9 +349,9 @@ SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1
-TIM3.Period=1000
-TIM3.Prescaler=32000
-TIM3.Pulse-PWM\ Generation1\ CH1=500
+TIM3.Period=100
+TIM3.Prescaler=6400
+TIM3.Pulse-PWM\ Generation1\ CH1=0
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
