--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -17,15 +17,16 @@ KeepUserPlacement=true
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
+Mcu.IP10=USB_OTG_FS
 Mcu.IP2=ETH
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
 Mcu.IP6=TIM3
-Mcu.IP7=USART3
-Mcu.IP8=USB_DEVICE
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP7=TIM4
+Mcu.IP8=USART3
+Mcu.IP9=USB_DEVICE
+Mcu.IPNb=11
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -39,31 +40,33 @@ Mcu.Pin15=PB13
 Mcu.Pin16=PB14
 Mcu.Pin17=PD8
 Mcu.Pin18=PD9
-Mcu.Pin19=PG6
+Mcu.Pin19=PD12
 Mcu.Pin2=PC13
-Mcu.Pin20=PG7
-Mcu.Pin21=PA8
-Mcu.Pin22=PA9
-Mcu.Pin23=PA10
-Mcu.Pin24=PA11
-Mcu.Pin25=PA12
-Mcu.Pin26=PA13
-Mcu.Pin27=PA14
-Mcu.Pin28=PG11
-Mcu.Pin29=PG13
+Mcu.Pin20=PG6
+Mcu.Pin21=PG7
+Mcu.Pin22=PA8
+Mcu.Pin23=PA9
+Mcu.Pin24=PA10
+Mcu.Pin25=PA11
+Mcu.Pin26=PA12
+Mcu.Pin27=PA13
+Mcu.Pin28=PA14
+Mcu.Pin29=PG11
 Mcu.Pin3=PC14/OSC32_IN
-Mcu.Pin30=PB3
-Mcu.Pin31=PB7
-Mcu.Pin32=VP_SYS_VS_Systick
-Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin34=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=PG13
+Mcu.Pin31=PB3
+Mcu.Pin32=PB7
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PC15/OSC32_OUT
 Mcu.Pin5=PH0/OSC_IN
 Mcu.Pin6=PH1/OSC_OUT
 Mcu.Pin7=PC1
 Mcu.Pin8=PA0/WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=35
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -179,6 +182,7 @@ PCC.Seq0=0
 PCC.Series=STM32F7
 PCC.Temperature=25
 PCC.Vdd=3.6
+PD12.Signal=S_TIM4_CH1
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -347,11 +351,17 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
+SH.S_TIM4_CH1.ConfNb=1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1
 TIM3.Period=100
 TIM3.Prescaler=6400
 TIM3.Pulse-PWM\ Generation1\ CH1=0
+TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
+TIM4.Period=100
+TIM4.Prescaler=3200
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
@@ -364,6 +374,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=NUCLEO-F767ZI
