--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -7,6 +7,13 @@ ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.Resolution=ADC_RESOLUTION_10B
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
 ADC1.master=1
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,ClockPrescaler,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,Resolution
+ADC2.NbrOfConversionFlag=1
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.Resolution=ADC_RESOLUTION_10B
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
 ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
@@ -16,57 +23,59 @@ File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
-Mcu.IP1=CORTEX_M7
-Mcu.IP10=USB_OTG_FS
-Mcu.IP2=ETH
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM3
-Mcu.IP7=TIM4
-Mcu.IP8=USART3
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=11
+Mcu.IP1=ADC2
+Mcu.IP10=USB_DEVICE
+Mcu.IP11=USB_OTG_FS
+Mcu.IP2=CORTEX_M7
+Mcu.IP3=ETH
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM3
+Mcu.IP8=TIM4
+Mcu.IP9=USART3
+Mcu.IPNb=12
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
 Mcu.Pin10=PA2
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PC4
-Mcu.Pin14=PC5
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PD8
-Mcu.Pin18=PD9
-Mcu.Pin19=PD12
+Mcu.Pin11=PA3
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB13
+Mcu.Pin17=PB14
+Mcu.Pin18=PD8
+Mcu.Pin19=PD9
 Mcu.Pin2=PC13
-Mcu.Pin20=PG6
-Mcu.Pin21=PG7
-Mcu.Pin22=PA8
-Mcu.Pin23=PA9
-Mcu.Pin24=PA10
-Mcu.Pin25=PA11
-Mcu.Pin26=PA12
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PG11
+Mcu.Pin20=PD12
+Mcu.Pin21=PG6
+Mcu.Pin22=PG7
+Mcu.Pin23=PA8
+Mcu.Pin24=PA9
+Mcu.Pin25=PA10
+Mcu.Pin26=PA11
+Mcu.Pin27=PA12
+Mcu.Pin28=PA13
+Mcu.Pin29=PA14
 Mcu.Pin3=PC14/OSC32_IN
-Mcu.Pin30=PG13
-Mcu.Pin31=PB3
-Mcu.Pin32=PB7
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=PG11
+Mcu.Pin31=PG13
+Mcu.Pin32=PB3
+Mcu.Pin33=PB7
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin37=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PC15/OSC32_OUT
 Mcu.Pin5=PH0/OSC_IN
 Mcu.Pin6=PH1/OSC_OUT
 Mcu.Pin7=PC1
 Mcu.Pin8=PA0/WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=37
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -118,6 +127,7 @@ PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
 PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
+PA3.Signal=ADCx_IN3
 PA6.Signal=S_TIM3_CH1
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
@@ -347,6 +357,8 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN3.0=ADC2_IN3,IN3
+SH.ADCx_IN3.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
