ADC Multichannel only code not tested
ADC Multichannel has only be programmed but not been tested yet.

--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -356,7 +356,8 @@ RCC.VCOSAIOutputFreq_Value=384000000
 RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
-SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN0.1=ADC2_IN0,IN0
+SH.ADCx_IN0.ConfNb=2
 SH.ADCx_IN3.0=ADC2_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
