erkennt 2ten joystick ohn multichannel

--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -14,6 +14,13 @@ ADC2.NbrOfConversionFlag=1
 ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.Resolution=ADC_RESOLUTION_10B
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC3.IPParameters=Rank-1\#ChannelRegularConversion,ClockPrescaler,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,Resolution
+ADC3.NbrOfConversionFlag=1
+ADC3.Rank-1\#ChannelRegularConversion=1
+ADC3.Resolution=ADC_RESOLUTION_10B
+ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
 ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
@@ -24,58 +31,60 @@ KeepUserPlacement=true
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=USB_DEVICE
-Mcu.IP11=USB_OTG_FS
-Mcu.IP2=CORTEX_M7
-Mcu.IP3=ETH
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM3
-Mcu.IP8=TIM4
-Mcu.IP9=USART3
-Mcu.IPNb=12
+Mcu.IP10=USART3
+Mcu.IP11=USB_DEVICE
+Mcu.IP12=USB_OTG_FS
+Mcu.IP2=ADC3
+Mcu.IP3=CORTEX_M7
+Mcu.IP4=ETH
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IPNb=13
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PA2
-Mcu.Pin11=PA3
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PC4
-Mcu.Pin15=PC5
-Mcu.Pin16=PB13
-Mcu.Pin17=PB14
-Mcu.Pin18=PD8
-Mcu.Pin19=PD9
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA6
+Mcu.Pin14=PA7
+Mcu.Pin15=PC4
+Mcu.Pin16=PC5
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PD8
 Mcu.Pin2=PC13
-Mcu.Pin20=PD12
-Mcu.Pin21=PG6
-Mcu.Pin22=PG7
-Mcu.Pin23=PA8
-Mcu.Pin24=PA9
-Mcu.Pin25=PA10
-Mcu.Pin26=PA11
-Mcu.Pin27=PA12
-Mcu.Pin28=PA13
-Mcu.Pin29=PA14
+Mcu.Pin20=PD9
+Mcu.Pin21=PD12
+Mcu.Pin22=PG6
+Mcu.Pin23=PG7
+Mcu.Pin24=PA8
+Mcu.Pin25=PA9
+Mcu.Pin26=PA10
+Mcu.Pin27=PA11
+Mcu.Pin28=PA12
+Mcu.Pin29=PA13
 Mcu.Pin3=PC14/OSC32_IN
-Mcu.Pin30=PG11
-Mcu.Pin31=PG13
-Mcu.Pin32=PB3
-Mcu.Pin33=PB7
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin37=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=PA14
+Mcu.Pin31=PG11
+Mcu.Pin32=PG13
+Mcu.Pin33=PB3
+Mcu.Pin34=PB7
+Mcu.Pin35=VP_SYS_VS_Systick
+Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin38=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PC15/OSC32_OUT
-Mcu.Pin5=PH0/OSC_IN
-Mcu.Pin6=PH1/OSC_OUT
-Mcu.Pin7=PC1
-Mcu.Pin8=PA0/WKUP
-Mcu.Pin9=PA1
-Mcu.PinsNb=38
+Mcu.Pin5=PF6
+Mcu.Pin6=PH0/OSC_IN
+Mcu.Pin7=PH1/OSC_OUT
+Mcu.Pin8=PC1
+Mcu.Pin9=PA0/WKUP
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -213,6 +222,8 @@ PE3.GPIO_Label=RedButton
 PE3.GPIO_PuPd=GPIO_PULLDOWN
 PE3.Locked=true
 PE3.Signal=GPIO_Input
+PF6.Mode=IN4
+PF6.Signal=ADC3_IN4
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
