--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -39,42 +39,43 @@ Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PA2
-Mcu.Pin11=PA4
-Mcu.Pin12=PA5
-Mcu.Pin13=PA6
-Mcu.Pin14=PA7
-Mcu.Pin15=PC4
-Mcu.Pin16=PC5
-Mcu.Pin17=PB13
-Mcu.Pin18=PB14
-Mcu.Pin19=PD8
-Mcu.Pin2=PC13
-Mcu.Pin20=PD9
-Mcu.Pin21=PG6
-Mcu.Pin22=PG7
-Mcu.Pin23=PA8
-Mcu.Pin24=PA9
-Mcu.Pin25=PA10
-Mcu.Pin26=PA11
-Mcu.Pin27=PA12
-Mcu.Pin28=PA13
-Mcu.Pin29=PA14
-Mcu.Pin3=PC14/OSC32_IN
-Mcu.Pin30=PG11
-Mcu.Pin31=PG13
-Mcu.Pin32=PB3
-Mcu.Pin33=PB7
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin4=PC15/OSC32_OUT
-Mcu.Pin5=PH0/OSC_IN
-Mcu.Pin6=PH1/OSC_OUT
-Mcu.Pin7=PC1
-Mcu.Pin8=PA0/WKUP
-Mcu.Pin9=PA1
-Mcu.PinsNb=37
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA4
+Mcu.Pin13=PA5
+Mcu.Pin14=PA6
+Mcu.Pin15=PA7
+Mcu.Pin16=PC4
+Mcu.Pin17=PC5
+Mcu.Pin18=PB13
+Mcu.Pin19=PB14
+Mcu.Pin2=PE4
+Mcu.Pin20=PD8
+Mcu.Pin21=PD9
+Mcu.Pin22=PG6
+Mcu.Pin23=PG7
+Mcu.Pin24=PA8
+Mcu.Pin25=PA9
+Mcu.Pin26=PA10
+Mcu.Pin27=PA11
+Mcu.Pin28=PA12
+Mcu.Pin29=PA13
+Mcu.Pin3=PC13
+Mcu.Pin30=PA14
+Mcu.Pin31=PG11
+Mcu.Pin32=PG13
+Mcu.Pin33=PB3
+Mcu.Pin34=PB7
+Mcu.Pin35=VP_SYS_VS_Systick
+Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin37=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin4=PC14/OSC32_IN
+Mcu.Pin5=PC15/OSC32_OUT
+Mcu.Pin6=PH0/OSC_IN
+Mcu.Pin7=PH1/OSC_OUT
+Mcu.Pin8=PC1
+Mcu.Pin9=PA0/WKUP
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -214,6 +215,10 @@ PE3.GPIO_Label=RedButton
 PE3.GPIO_PuPd=GPIO_PULLDOWN
 PE3.Locked=true
 PE3.Signal=GPIO_Input
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=Memorystop
+PE4.Locked=true
+PE4.Signal=GPIO_Input
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
