--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -21,6 +21,18 @@ ADC3.NbrOfConversionFlag=1
 ADC3.Rank-1\#ChannelRegularConversion=1
 ADC3.Resolution=ADC_RESOLUTION_10B
 ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+Dma.Request0=USART2_TX
+Dma.RequestsNb=1
+Dma.USART2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_TX.0.Instance=DMA1_Stream6
+Dma.USART2_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.0.Mode=DMA_NORMAL
+Dma.USART2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
@@ -31,18 +43,20 @@ KeepUserPlacement=true
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=USART3
-Mcu.IP11=USB_DEVICE
-Mcu.IP12=USB_OTG_FS
+Mcu.IP10=TIM4
+Mcu.IP11=USART2
+Mcu.IP12=USART3
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_FS
 Mcu.IP2=ADC3
 Mcu.IP3=CORTEX_M7
-Mcu.IP4=ETH
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IP8=TIM3
-Mcu.IP9=TIM4
-Mcu.IPNb=13
+Mcu.IP4=DMA
+Mcu.IP5=ETH
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SYS
+Mcu.IP9=TIM3
+Mcu.IPNb=15
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -71,27 +85,30 @@ Mcu.Pin29=PA12
 Mcu.Pin3=PC13
 Mcu.Pin30=PA13
 Mcu.Pin31=PA14
-Mcu.Pin32=PG11
-Mcu.Pin33=PG13
-Mcu.Pin34=PB3
-Mcu.Pin35=PB7
-Mcu.Pin36=VP_SYS_VS_Systick
-Mcu.Pin37=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin32=PD5
+Mcu.Pin33=PD6
+Mcu.Pin34=PG11
+Mcu.Pin35=PG13
+Mcu.Pin36=PB3
+Mcu.Pin37=PB7
+Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PC14/OSC32_IN
+Mcu.Pin40=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin41=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PC15/OSC32_OUT
 Mcu.Pin6=PF6
 Mcu.Pin7=PH0/OSC_IN
 Mcu.Pin8=PH1/OSC_OUT
 Mcu.Pin9=PC1
-Mcu.PinsNb=40
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
 MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -101,6 +118,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA0/WKUP.Signal=ADCx_IN0
 PA1.GPIOParameters=GPIO_Label
@@ -179,10 +197,8 @@ PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14/OSC32_IN.Locked=true
-PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Locked=true
-PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
@@ -203,6 +219,10 @@ PCC.Series=STM32F7
 PCC.Temperature=25
 PCC.Vdd=3.6
 PD12.Signal=S_TIM4_CH1
+PD5.Mode=Asynchronous
+PD5.Signal=USART2_TX
+PD6.Mode=Asynchronous
+PD6.Signal=USART2_RX
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -251,10 +271,10 @@ PG7.Signal=GPIO_Input
 PH0/OSC_IN.GPIOParameters=GPIO_Label
 PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
 PH0/OSC_IN.Locked=true
-PH0/OSC_IN.Mode=HSE-External-Clock-Source
+PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Locked=true
-PH1/OSC_OUT.Mode=HSE-External-Clock-Source
+PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -390,6 +410,9 @@ TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
 TIM4.Period=10000
 TIM4.Prescaler=64
+USART2.BaudRate=9600 
+USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
