--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -61,47 +61,48 @@ Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PA0/WKUP
-Mcu.Pin11=PA1
-Mcu.Pin12=PA2
-Mcu.Pin13=PA3
-Mcu.Pin14=PA6
-Mcu.Pin15=PA7
-Mcu.Pin16=PC4
-Mcu.Pin17=PC5
-Mcu.Pin18=PB13
-Mcu.Pin19=PB14
+Mcu.Pin10=PC1
+Mcu.Pin11=PA0/WKUP
+Mcu.Pin12=PA1
+Mcu.Pin13=PA2
+Mcu.Pin14=PA3
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB13
 Mcu.Pin2=PE4
-Mcu.Pin20=PD8
-Mcu.Pin21=PD9
-Mcu.Pin22=PD12
-Mcu.Pin23=PG6
-Mcu.Pin24=PG7
-Mcu.Pin25=PA8
-Mcu.Pin26=PA9
-Mcu.Pin27=PA10
-Mcu.Pin28=PA11
-Mcu.Pin29=PA12
-Mcu.Pin3=PC13
-Mcu.Pin30=PA13
-Mcu.Pin31=PA14
-Mcu.Pin32=PD5
-Mcu.Pin33=PD6
-Mcu.Pin34=PG11
-Mcu.Pin35=PG13
-Mcu.Pin36=PB3
-Mcu.Pin37=PB7
-Mcu.Pin38=VP_SYS_VS_Systick
-Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin4=PC14/OSC32_IN
-Mcu.Pin40=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin41=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin5=PC15/OSC32_OUT
-Mcu.Pin6=PF6
-Mcu.Pin7=PH0/OSC_IN
-Mcu.Pin8=PH1/OSC_OUT
-Mcu.Pin9=PC1
-Mcu.PinsNb=42
+Mcu.Pin20=PB14
+Mcu.Pin21=PD8
+Mcu.Pin22=PD9
+Mcu.Pin23=PD12
+Mcu.Pin24=PG6
+Mcu.Pin25=PG7
+Mcu.Pin26=PA8
+Mcu.Pin27=PA9
+Mcu.Pin28=PA10
+Mcu.Pin29=PA11
+Mcu.Pin3=PE5
+Mcu.Pin30=PA12
+Mcu.Pin31=PA13
+Mcu.Pin32=PA14
+Mcu.Pin33=PD5
+Mcu.Pin34=PD6
+Mcu.Pin35=PG11
+Mcu.Pin36=PG13
+Mcu.Pin37=PB3
+Mcu.Pin38=PB7
+Mcu.Pin39=VP_SYS_VS_Systick
+Mcu.Pin4=PC13
+Mcu.Pin40=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin42=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin5=PC14/OSC32_IN
+Mcu.Pin6=PC15/OSC32_OUT
+Mcu.Pin7=PF6
+Mcu.Pin8=PH0/OSC_IN
+Mcu.Pin9=PH1/OSC_OUT
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -247,6 +248,10 @@ PE4.GPIOParameters=GPIO_Label
 PE4.GPIO_Label=Memorystop
 PE4.Locked=true
 PE4.Signal=GPIO_Input
+PE5.GPIOParameters=GPIO_Label
+PE5.GPIO_Label=Memorytrans
+PE5.Locked=true
+PE5.Signal=GPIO_Input
 PF6.Mode=IN4
 PF6.Signal=ADC3_IN4
 PG11.GPIOParameters=GPIO_Label
