--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -61,48 +61,49 @@ Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PC1
-Mcu.Pin11=PA0/WKUP
-Mcu.Pin12=PA1
-Mcu.Pin13=PA2
-Mcu.Pin14=PA3
-Mcu.Pin15=PA6
-Mcu.Pin16=PA7
-Mcu.Pin17=PC4
-Mcu.Pin18=PC5
-Mcu.Pin19=PB13
+Mcu.Pin10=PH1/OSC_OUT
+Mcu.Pin11=PC1
+Mcu.Pin12=PA0/WKUP
+Mcu.Pin13=PA1
+Mcu.Pin14=PA2
+Mcu.Pin15=PA3
+Mcu.Pin16=PA6
+Mcu.Pin17=PA7
+Mcu.Pin18=PC4
+Mcu.Pin19=PC5
 Mcu.Pin2=PE4
-Mcu.Pin20=PB14
-Mcu.Pin21=PD8
-Mcu.Pin22=PD9
-Mcu.Pin23=PD12
-Mcu.Pin24=PG6
-Mcu.Pin25=PG7
-Mcu.Pin26=PA8
-Mcu.Pin27=PA9
-Mcu.Pin28=PA10
-Mcu.Pin29=PA11
+Mcu.Pin20=PB13
+Mcu.Pin21=PB14
+Mcu.Pin22=PD8
+Mcu.Pin23=PD9
+Mcu.Pin24=PD12
+Mcu.Pin25=PG6
+Mcu.Pin26=PG7
+Mcu.Pin27=PA8
+Mcu.Pin28=PA9
+Mcu.Pin29=PA10
 Mcu.Pin3=PE5
-Mcu.Pin30=PA12
-Mcu.Pin31=PA13
-Mcu.Pin32=PA14
-Mcu.Pin33=PD5
-Mcu.Pin34=PD6
-Mcu.Pin35=PG11
-Mcu.Pin36=PG13
-Mcu.Pin37=PB3
-Mcu.Pin38=PB7
-Mcu.Pin39=VP_SYS_VS_Systick
+Mcu.Pin30=PA11
+Mcu.Pin31=PA12
+Mcu.Pin32=PA13
+Mcu.Pin33=PA14
+Mcu.Pin34=PD5
+Mcu.Pin35=PD6
+Mcu.Pin36=PG11
+Mcu.Pin37=PG13
+Mcu.Pin38=PB3
+Mcu.Pin39=PB7
 Mcu.Pin4=PC13
-Mcu.Pin40=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin42=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin40=VP_SYS_VS_Systick
+Mcu.Pin41=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin42=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin43=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PC14/OSC32_IN
 Mcu.Pin6=PC15/OSC32_OUT
-Mcu.Pin7=PF6
-Mcu.Pin8=PH0/OSC_IN
-Mcu.Pin9=PH1/OSC_OUT
-Mcu.PinsNb=43
+Mcu.Pin7=PF0
+Mcu.Pin8=PF6
+Mcu.Pin9=PH0/OSC_IN
+Mcu.PinsNb=44
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -111,6 +112,7 @@ MxDb.Version=DB.5.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -252,6 +254,10 @@ PE5.GPIOParameters=GPIO_Label
 PE5.GPIO_Label=Memorytrans
 PE5.Locked=true
 PE5.Signal=GPIO_Input
+PF0.GPIOParameters=GPIO_Label
+PF0.GPIO_Label=Counterrisingedge
+PF0.Locked=true
+PF0.Signal=GPXTI0
 PF6.Mode=IN4
 PF6.Signal=ADC3_IN4
 PG11.GPIOParameters=GPIO_Label
@@ -401,6 +407,8 @@ SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN3.0=ADC2_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
