--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -4,8 +4,8 @@ ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-1\#ChannelRegularConversion=1
-ADC1.Resolution=ADC_RESOLUTION_10B
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC1.Resolution=ADC_RESOLUTION_12B
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
@@ -13,7 +13,7 @@ ADC2.IPParameters=Rank-0\#ChannelRegularConversion,ClockPrescaler,Channel-0\#Cha
 ADC2.NbrOfConversionFlag=1
 ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.Resolution=ADC_RESOLUTION_10B
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
 ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC3.IPParameters=Rank-1\#ChannelRegularConversion,ClockPrescaler,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,Resolution
@@ -68,44 +68,45 @@ Mcu.Pin12=PA0/WKUP
 Mcu.Pin13=PA1
 Mcu.Pin14=PA2
 Mcu.Pin15=PA3
-Mcu.Pin16=PA6
-Mcu.Pin17=PA7
-Mcu.Pin18=PC4
-Mcu.Pin19=PC5
+Mcu.Pin16=PA4
+Mcu.Pin17=PA6
+Mcu.Pin18=PA7
+Mcu.Pin19=PC4
 Mcu.Pin2=PE4
-Mcu.Pin20=PB13
-Mcu.Pin21=PB14
-Mcu.Pin22=PD8
-Mcu.Pin23=PD9
-Mcu.Pin24=PD12
-Mcu.Pin25=PG6
-Mcu.Pin26=PG7
-Mcu.Pin27=PA8
-Mcu.Pin28=PA9
-Mcu.Pin29=PA10
+Mcu.Pin20=PC5
+Mcu.Pin21=PB13
+Mcu.Pin22=PB14
+Mcu.Pin23=PD8
+Mcu.Pin24=PD9
+Mcu.Pin25=PD12
+Mcu.Pin26=PG6
+Mcu.Pin27=PG7
+Mcu.Pin28=PA8
+Mcu.Pin29=PA9
 Mcu.Pin3=PE5
-Mcu.Pin30=PA11
-Mcu.Pin31=PA12
-Mcu.Pin32=PA13
-Mcu.Pin33=PA14
-Mcu.Pin34=PD5
-Mcu.Pin35=PD6
-Mcu.Pin36=PG11
-Mcu.Pin37=PG13
-Mcu.Pin38=PB3
-Mcu.Pin39=PB7
+Mcu.Pin30=PA10
+Mcu.Pin31=PA11
+Mcu.Pin32=PA12
+Mcu.Pin33=PA13
+Mcu.Pin34=PA14
+Mcu.Pin35=PD5
+Mcu.Pin36=PD6
+Mcu.Pin37=PG11
+Mcu.Pin38=PG13
+Mcu.Pin39=PB3
 Mcu.Pin4=PC13
-Mcu.Pin40=VP_SYS_VS_Systick
-Mcu.Pin41=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin42=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin43=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin44=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin40=PB7
+Mcu.Pin41=VP_SYS_VS_Systick
+Mcu.Pin42=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin45=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PC14/OSC32_IN
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
 Mcu.Pin8=PF6
 Mcu.Pin9=PH0/OSC_IN
-Mcu.PinsNb=45
+Mcu.PinsNb=46
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -162,6 +163,7 @@ PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
 PA3.Signal=ADCx_IN3
+PA4.Signal=ADCx_IN4
 PA6.Signal=S_TIM3_CH1
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
@@ -317,7 +319,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,9-MX_ADC2_Init-ADC2-false-HAL-true,10-MX_ADC3_Init-ADC3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,9-MX_ADC2_Init-ADC2-false-HAL-true,10-MX_ADC3_Init-ADC3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_USART2_UART_Init-USART2-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -410,6 +412,8 @@ SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN3.0=ADC2_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
+SH.ADCx_IN4.0=ADC1_IN4,IN4
+SH.ADCx_IN4.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
