--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -273,12 +273,14 @@ PE3.GPIO_Label=RedButton
 PE3.GPIO_PuPd=GPIO_PULLDOWN
 PE3.Locked=true
 PE3.Signal=GPIO_Input
-PE4.GPIOParameters=GPIO_Label
+PE4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE4.GPIO_Label=Memorystop
+PE4.GPIO_PuPd=GPIO_PULLDOWN
 PE4.Locked=true
 PE4.Signal=GPIO_Input
-PE5.GPIOParameters=GPIO_Label
+PE5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE5.GPIO_Label=Memorytrans
+PE5.GPIO_PuPd=GPIO_PULLDOWN
 PE5.Locked=true
 PE5.Signal=GPIO_Input
 PF0.GPIOParameters=GPIO_Label
@@ -341,7 +343,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
