--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -81,63 +81,65 @@ Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PH1/OSC_OUT
-Mcu.Pin11=PC1
-Mcu.Pin12=PA0/WKUP
-Mcu.Pin13=PA1
-Mcu.Pin14=PA2
-Mcu.Pin15=PA3
-Mcu.Pin16=PA5
-Mcu.Pin17=PA6
-Mcu.Pin18=PA7
-Mcu.Pin19=PC4
+Mcu.Pin10=PH0/OSC_IN
+Mcu.Pin11=PH1/OSC_OUT
+Mcu.Pin12=PC1
+Mcu.Pin13=PA0/WKUP
+Mcu.Pin14=PA1
+Mcu.Pin15=PA2
+Mcu.Pin16=PA3
+Mcu.Pin17=PA5
+Mcu.Pin18=PA6
+Mcu.Pin19=PA7
 Mcu.Pin2=PE4
-Mcu.Pin20=PC5
-Mcu.Pin21=PB13
-Mcu.Pin22=PB14
-Mcu.Pin23=PD8
-Mcu.Pin24=PD9
-Mcu.Pin25=PD12
-Mcu.Pin26=PG6
-Mcu.Pin27=PG7
-Mcu.Pin28=PA8
-Mcu.Pin29=PA9
+Mcu.Pin20=PC4
+Mcu.Pin21=PC5
+Mcu.Pin22=PB13
+Mcu.Pin23=PB14
+Mcu.Pin24=PD8
+Mcu.Pin25=PD9
+Mcu.Pin26=PD12
+Mcu.Pin27=PG6
+Mcu.Pin28=PG7
+Mcu.Pin29=PA8
 Mcu.Pin3=PE5
-Mcu.Pin30=PA10
-Mcu.Pin31=PA11
-Mcu.Pin32=PA12
-Mcu.Pin33=PA13
-Mcu.Pin34=PA14
-Mcu.Pin35=PD5
-Mcu.Pin36=PD6
-Mcu.Pin37=PG11
-Mcu.Pin38=PG13
-Mcu.Pin39=PB3
+Mcu.Pin30=PA9
+Mcu.Pin31=PA10
+Mcu.Pin32=PA11
+Mcu.Pin33=PA12
+Mcu.Pin34=PA13
+Mcu.Pin35=PA14
+Mcu.Pin36=PD5
+Mcu.Pin37=PD6
+Mcu.Pin38=PG11
+Mcu.Pin39=PG13
 Mcu.Pin4=PC13
-Mcu.Pin40=PB7
-Mcu.Pin41=VP_SYS_VS_Systick
-Mcu.Pin42=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin43=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin44=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin45=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin46=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin40=PB3
+Mcu.Pin41=PB7
+Mcu.Pin42=VP_SYS_VS_Systick
+Mcu.Pin43=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin46=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin47=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PC14/OSC32_IN
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
-Mcu.Pin8=PF6
-Mcu.Pin9=PH0/OSC_IN
-Mcu.PinsNb=47
+Mcu.Pin8=PF3
+Mcu.Pin9=PF6
+Mcu.PinsNb=48
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
-MxCube.Version=5.3.0
-MxDb.Version=DB.5.0.30
+MxCube.Version=5.4.0
+MxDb.Version=DB.5.0.40
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -287,6 +289,10 @@ PF0.GPIOParameters=GPIO_Label
 PF0.GPIO_Label=Counterrisingedge
 PF0.Locked=true
 PF0.Signal=GPXTI0
+PF3.GPIOParameters=GPIO_Label
+PF3.GPIO_Label=Auto_Hand_Betrieb
+PF3.Locked=true
+PF3.Signal=GPIO_Input
 PF6.Mode=IN4
 PF6.Signal=ADC3_IN4
 PG11.GPIOParameters=GPIO_Label
