pohns fehler ausbessern v1

--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -81,44 +81,44 @@ Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PF6
-Mcu.Pin11=PF8
-Mcu.Pin12=PH0/OSC_IN
-Mcu.Pin13=PH1/OSC_OUT
-Mcu.Pin14=PC1
-Mcu.Pin15=PA0/WKUP
-Mcu.Pin16=PA1
-Mcu.Pin17=PA2
-Mcu.Pin18=PA3
-Mcu.Pin19=PA5
+Mcu.Pin10=PF5
+Mcu.Pin11=PF6
+Mcu.Pin12=PF8
+Mcu.Pin13=PH0/OSC_IN
+Mcu.Pin14=PH1/OSC_OUT
+Mcu.Pin15=PC1
+Mcu.Pin16=PA0/WKUP
+Mcu.Pin17=PA1
+Mcu.Pin18=PA2
+Mcu.Pin19=PA3
 Mcu.Pin2=PE4
-Mcu.Pin20=PA6
-Mcu.Pin21=PA7
-Mcu.Pin22=PC4
-Mcu.Pin23=PC5
-Mcu.Pin24=PB13
-Mcu.Pin25=PB14
-Mcu.Pin26=PD8
-Mcu.Pin27=PD9
-Mcu.Pin28=PD12
-Mcu.Pin29=PG6
+Mcu.Pin20=PA5
+Mcu.Pin21=PA6
+Mcu.Pin22=PA7
+Mcu.Pin23=PC4
+Mcu.Pin24=PC5
+Mcu.Pin25=PB13
+Mcu.Pin26=PB14
+Mcu.Pin27=PD8
+Mcu.Pin28=PD9
+Mcu.Pin29=PD12
 Mcu.Pin3=PE5
-Mcu.Pin30=PG7
-Mcu.Pin31=PA8
-Mcu.Pin32=PA9
-Mcu.Pin33=PA10
-Mcu.Pin34=PA11
-Mcu.Pin35=PA12
-Mcu.Pin36=PA13
-Mcu.Pin37=PA14
-Mcu.Pin38=PD5
-Mcu.Pin39=PD6
+Mcu.Pin30=PG6
+Mcu.Pin31=PG7
+Mcu.Pin32=PA8
+Mcu.Pin33=PA9
+Mcu.Pin34=PA10
+Mcu.Pin35=PA11
+Mcu.Pin36=PA12
+Mcu.Pin37=PA13
+Mcu.Pin38=PA14
+Mcu.Pin39=PD5
 Mcu.Pin4=PC13
-Mcu.Pin40=PG11
-Mcu.Pin41=PG13
-Mcu.Pin42=PB3
-Mcu.Pin43=PB7
-Mcu.Pin44=PE0
+Mcu.Pin40=PD6
+Mcu.Pin41=PG11
+Mcu.Pin42=PG13
+Mcu.Pin43=PB3
+Mcu.Pin44=PB7
 Mcu.Pin45=VP_SYS_VS_Systick
 Mcu.Pin46=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin47=VP_TIM2_VS_ClockSourceINT
@@ -128,8 +128,8 @@ Mcu.Pin5=PC14/OSC32_IN
 Mcu.Pin50=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
-Mcu.Pin8=PF3
-Mcu.Pin9=PF5
+Mcu.Pin8=PF1
+Mcu.Pin9=PF3
 Mcu.PinsNb=51
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -268,10 +268,6 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
-PE0.GPIOParameters=GPIO_Label
-PE0.GPIO_Label=angle_0
-PE0.Locked=true
-PE0.Signal=GPIO_Output
 PE2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE2.GPIO_Label=BlueButton
 PE2.GPIO_PuPd=GPIO_PULLDOWN
@@ -296,6 +292,10 @@ PF0.GPIOParameters=GPIO_Label
 PF0.GPIO_Label=Counterrisingedge
 PF0.Locked=true
 PF0.Signal=GPXTI0
+PF1.GPIOParameters=GPIO_Label
+PF1.GPIO_Label=angle_0
+PF1.Locked=true
+PF1.Signal=GPIO_Output
 PF3.GPIOParameters=GPIO_Label
 PF3.GPIO_Label=Auto_Hand_Betrieb
 PF3.Locked=true
@@ -306,8 +306,9 @@ PF5.Locked=true
 PF5.Signal=GPIO_Input
 PF6.Mode=IN4
 PF6.Signal=ADC3_IN4
-PF8.GPIOParameters=GPIO_Label
+PF8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF8.GPIO_Label=Memory_store
+PF8.GPIO_PuPd=GPIO_PULLDOWN
 PF8.Locked=true
 PF8.Signal=GPIO_Input
 PG11.GPIOParameters=GPIO_Label
