stm empfaengt daten vom handy

--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -65,10 +65,11 @@ Mcu.IP10=TIM2
 Mcu.IP11=TIM3
 Mcu.IP12=TIM4
 Mcu.IP13=TIM10
-Mcu.IP14=USART2
-Mcu.IP15=USART3
-Mcu.IP16=USB_DEVICE
-Mcu.IP17=USB_OTG_FS
+Mcu.IP14=UART4
+Mcu.IP15=USART2
+Mcu.IP16=USART3
+Mcu.IP17=USB_DEVICE
+Mcu.IP18=USB_OTG_FS
 Mcu.IP2=ADC3
 Mcu.IP3=CORTEX_M7
 Mcu.IP4=DMA
@@ -77,7 +78,7 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=18
+Mcu.IPNb=19
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -113,27 +114,29 @@ Mcu.Pin35=PA11
 Mcu.Pin36=PA12
 Mcu.Pin37=PA13
 Mcu.Pin38=PA14
-Mcu.Pin39=PD5
+Mcu.Pin39=PC10
 Mcu.Pin4=PC13
-Mcu.Pin40=PD6
-Mcu.Pin41=PG11
-Mcu.Pin42=PG13
-Mcu.Pin43=PB3
-Mcu.Pin44=PB7
-Mcu.Pin45=PB8
-Mcu.Pin46=VP_SYS_VS_Systick
-Mcu.Pin47=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin40=PC11
+Mcu.Pin41=PD5
+Mcu.Pin42=PD6
+Mcu.Pin43=PG11
+Mcu.Pin44=PG13
+Mcu.Pin45=PB3
+Mcu.Pin46=PB7
+Mcu.Pin47=PB8
+Mcu.Pin48=VP_SYS_VS_Systick
+Mcu.Pin49=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin5=PC14/OSC32_IN
-Mcu.Pin50=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin51=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin52=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin50=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin52=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin53=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin54=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
 Mcu.Pin8=PF1
 Mcu.Pin9=PF3
-Mcu.PinsNb=53
+Mcu.PinsNb=55
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -155,6 +158,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA0/WKUP.Signal=ADCx_IN0
@@ -231,6 +235,10 @@ PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
+PC10.Mode=Asynchronous
+PC10.Signal=UART4_TX
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
@@ -498,6 +506,8 @@ TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
 TIM4.Period=10000
 TIM4.Prescaler=64
+UART4.BaudRate=9600
+UART4.IPParameters=BaudRate
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
