--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -313,7 +313,7 @@ PE4.GPIO_Label=Status_buzzer
 PE4.Locked=true
 PE4.Signal=GPIO_Output
 PE5.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE5.GPIO_Label=free_button2
+PE5.GPIO_Label=free_Button_2
 PE5.GPIO_PuPd=GPIO_PULLDOWN
 PE5.Locked=true
 PE5.Signal=GPIO_Input
@@ -326,7 +326,7 @@ PF1.GPIO_Label=angle_0
 PF1.Locked=true
 PF1.Signal=GPIO_Output
 PF3.GPIOParameters=GPIO_PuPd,GPIO_Label
-PF3.GPIO_Label=Auto_Hand_Betrieb
+PF3.GPIO_Label=Freigabe
 PF3.GPIO_PuPd=GPIO_PULLDOWN
 PF3.Locked=true
 PF3.Signal=GPIO_Input
