Status Bluetooth eingefügt

--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -94,64 +94,65 @@ Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PF6
-Mcu.Pin11=PF8
-Mcu.Pin12=PH0/OSC_IN
-Mcu.Pin13=PH1/OSC_OUT
-Mcu.Pin14=PC1
-Mcu.Pin15=PC2
-Mcu.Pin16=PA0/WKUP
-Mcu.Pin17=PA1
-Mcu.Pin18=PA2
-Mcu.Pin19=PA3
+Mcu.Pin10=PF4
+Mcu.Pin11=PF6
+Mcu.Pin12=PF8
+Mcu.Pin13=PH0/OSC_IN
+Mcu.Pin14=PH1/OSC_OUT
+Mcu.Pin15=PC1
+Mcu.Pin16=PC2
+Mcu.Pin17=PA0/WKUP
+Mcu.Pin18=PA1
+Mcu.Pin19=PA2
 Mcu.Pin2=PE4
-Mcu.Pin20=PA5
-Mcu.Pin21=PA6
-Mcu.Pin22=PA7
-Mcu.Pin23=PC4
-Mcu.Pin24=PC5
-Mcu.Pin25=PF12
-Mcu.Pin26=PF13
-Mcu.Pin27=PB13
-Mcu.Pin28=PB14
-Mcu.Pin29=PD8
+Mcu.Pin20=PA3
+Mcu.Pin21=PA5
+Mcu.Pin22=PA6
+Mcu.Pin23=PA7
+Mcu.Pin24=PC4
+Mcu.Pin25=PC5
+Mcu.Pin26=PF12
+Mcu.Pin27=PF13
+Mcu.Pin28=PB13
+Mcu.Pin29=PB14
 Mcu.Pin3=PE5
-Mcu.Pin30=PD9
-Mcu.Pin31=PD12
-Mcu.Pin32=PG4
-Mcu.Pin33=PG5
-Mcu.Pin34=PG6
-Mcu.Pin35=PG7
-Mcu.Pin36=PA8
-Mcu.Pin37=PA9
-Mcu.Pin38=PA10
-Mcu.Pin39=PA11
+Mcu.Pin30=PD8
+Mcu.Pin31=PD9
+Mcu.Pin32=PD12
+Mcu.Pin33=PG4
+Mcu.Pin34=PG5
+Mcu.Pin35=PG6
+Mcu.Pin36=PG7
+Mcu.Pin37=PA8
+Mcu.Pin38=PA9
+Mcu.Pin39=PA10
 Mcu.Pin4=PC13
-Mcu.Pin40=PA12
-Mcu.Pin41=PA13
-Mcu.Pin42=PA14
-Mcu.Pin43=PC10
-Mcu.Pin44=PC11
-Mcu.Pin45=PD5
-Mcu.Pin46=PD6
-Mcu.Pin47=PG11
-Mcu.Pin48=PG13
-Mcu.Pin49=PB3
+Mcu.Pin40=PA11
+Mcu.Pin41=PA12
+Mcu.Pin42=PA13
+Mcu.Pin43=PA14
+Mcu.Pin44=PC10
+Mcu.Pin45=PC11
+Mcu.Pin46=PD5
+Mcu.Pin47=PD6
+Mcu.Pin48=PG11
+Mcu.Pin49=PG13
 Mcu.Pin5=PC14/OSC32_IN
-Mcu.Pin50=PB7
-Mcu.Pin51=PB8
-Mcu.Pin52=VP_SYS_VS_Systick
-Mcu.Pin53=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin54=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin55=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin56=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin57=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin58=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin50=PB3
+Mcu.Pin51=PB7
+Mcu.Pin52=PB8
+Mcu.Pin53=VP_SYS_VS_Systick
+Mcu.Pin54=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin55=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin58=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin59=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
 Mcu.Pin8=PF1
 Mcu.Pin9=PF3
-Mcu.PinsNb=59
+Mcu.PinsNb=60
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -340,6 +341,10 @@ PF3.GPIO_Label=Freigabe
 PF3.GPIO_PuPd=GPIO_PULLDOWN
 PF3.Locked=true
 PF3.Signal=GPIO_Input
+PF4.GPIOParameters=GPIO_Label
+PF4.GPIO_Label=Bluetooth_state
+PF4.Locked=true
+PF4.Signal=GPIO_Input
 PF6.Mode=IN4
 PF6.Signal=ADC3_IN4
 PF8.GPIOParameters=GPIO_Label
